@@ -7,6 +7,8 @@ Version 1.0.7 (Januari xxth 2013)
 - updated to RFCOM SDK version 6.01
 - Dashboard now includes server date
 - Barometer graph values now displays as whole number
+- meter values now only inserted in meter table when there is a difference in value
+- implemented utility graph 'last 24 hours usage'
 
 Version 1.0.6 (Januari 9th 2013)
 - RFXCOM Lan will now keep retrying to connect when it does not succeed on the first time
